--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-2.97MB/s(Youtube:不良林), server: 217.30.10.67, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
   - {name: 🇨🇳 中国-1.06MB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇨🇳 中国-7.43MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 波兰-3.05MB/s(Youtube:不良林), server: 217.30.10.63, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 波兰-2.33MB/s(Youtube:不良林), server: 217.30.10.63, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇺🇸 美国-5.28MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 波兰-1.31MB/s(Youtube:不良林), server: 217.30.10.65, port: 9053, type: ss, cipher: aes-256-cfb, password: SBM7R883jBmnqe6C}
+  - {name: 捷克-4.72MB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 38.121.43.71, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇺🇸 美国-685.7KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
-  - {name: 🇺🇸 美国-435.2KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.42MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-367.1KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
+  - {name: 🇺🇸 美国-3.98MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-175.0KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.62MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 波兰-3.05MB/s(Youtube:不良林)
-      - 波兰-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 捷克-4.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 波兰-3.05MB/s(Youtube:不良林)
-      - 波兰-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 捷克-4.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 波兰-3.05MB/s(Youtube:不良林)
-      - 波兰-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 捷克-4.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 波兰-3.05MB/s(Youtube:不良林)
-      - 波兰-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 捷克-4.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 波兰-3.05MB/s(Youtube:不良林)
-      - 波兰-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 捷克-4.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 波兰-3.05MB/s(Youtube:不良林)
-      - 波兰-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 捷克-4.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-2.97MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 波兰-3.05MB/s(Youtube:不良林)
-      - 波兰-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.28MB/s(Youtube:不良林)
+      - 波兰-1.31MB/s(Youtube:不良林)
+      - 捷克-4.72MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇺🇸 美国-685.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-435.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.62MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
