--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.74MB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇳🇱 荷兰-3.33MB/s(Youtube:不良林), server: 213.183.59.211, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 波兰-1.82MB/s(Youtube:不良林), server: 217.30.10.67, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
-  - {name: 🇺🇸 美国-367.1KB/s(Youtube:不良林), server: 161.8.184.62, port: 29622, type: ss, cipher: aes-256-gcm, password: !<str> 89930128}
-  - {name: 🇺🇸 美国-4.48MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-175.0KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.70MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.72MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.45MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-2.11MB/s(Youtube:不良林), server: 213.183.59.190, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 塞尔维亚-2.87MB/s(Youtube:不良林), server: 194.71.126.31, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: 38.121.43.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-4.25MB/s(Youtube:不良林), server: 51.81.223.17, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.40MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.45MB/s(Youtube:不良林), server: 51.81.223.31, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.21MB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 51.81.223.0, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.74MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-3.33MB/s(Youtube:不良林)
-      - 波兰-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-367.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-175.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.45MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.11MB/s(Youtube:不良林)
+      - 塞尔维亚-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.40MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
